--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,5 @@
 html {
-  background-image: radial-gradient(
-    circle farthest-corner at -4% -12.9%,
-    rgb(26, 40, 49) 0.3%,
-    rgb(9, 15, 22) 90.2%
-  );
+  background-image: radial-gradient(circle farthest-corner at -4% -12.9%, rgb(26, 40, 49) 0.3%, rgb(9, 15, 22) 90.2%);
   background-attachment: fixed;
   font-family: system-ui;
   margin: 0px;
