--- a/src/app/admin/page.css
+++ b/src/app/admin/page.css
@@ -4,14 +4,6 @@ html {
   overflow: hidden;
 }
 
-html.active_krach {
-  background-image: radial-gradient(
-    circle farthest-corner at -4% -12.9%,
-    rgb(76, 33, 33) 0.3%,
-    rgb(45, 18, 18) 90.2%
-  );
-}
-
 a {
   color: inherit;
   text-decoration: inherit;
@@ -32,18 +24,18 @@ a {
   justify-content: center;
   grid-gap: 40px;
 }
-.big_buttons > div div.gradient_div {
+.big_buttons .gradient_div {
   padding: 20px;
   border-radius: 15px;
   max-width: 150px;
 }
 
-.choices_buttons > div div {
+.choices_buttons .zoom {
   transform: scale(1);
   transition: transform 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
   cursor: pointer;
 }
-.choices_buttons > div div.zoom:hover {
+.choices_buttons .zoom:hover {
   transform: scale(1.05);
 }
 
