--- a/src/app/admin/settings/page.css
+++ b/src/app/admin/settings/page.css
@@ -53,6 +53,7 @@ body {
   text-decoration: none;
   font-weight: 500;
   padding: 20px;
+  margin: 0px 0px 20px 0px;
   border-radius: 15px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
   border: 1px solid rgb(0, 40, 70);
