--- a/src/app/login/page.css
+++ b/src/app/login/page.css
@@ -2,6 +2,7 @@
   min-height: 100%;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -14,7 +15,7 @@
   margin: 40px 0px;
 }
 
-#form_container > h1 {
+#content > h1 {
   margin: 0px;
 }
 
